Fix navigation overflow

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
 	margin: 0;
 	color: var(--clr-font-primary);
 	line-height: 1.5;
+	overflow-x: hidden;
 }
 
 *,
